# ShaderReflection

./: .gitignore  .gitmodules  CMakeLists.txt
projects/: CMakeLists.txt
projects/dxc_libporto_test/: CMakeLists.txt
projects/dxc_libporto_test/src/: DxcLibportoShaderReflection.cpp
projects/dxc_test/: CMakeLists.txt
projects/dxc_test/src/: ShaderReflection.cpp
projects/fxc_libporto_test/: CMakeLists.txt
projects/fxc_libporto_test/src/: FxcLibPortoShaderReflection.cpp
projects/fxc_test/: CMakeLists.txt
projects/fxc_test/include/: FxcShaderReflection.h
projects/fxc_test/src/: FxcShaderReflection.cpp
shaders/: CommonShader.h  Happy_Jumping.hlsl  StaticVertexColors.hlsl  array.hlsl  array2.hlsl  array_attribute_texture.hlsl  cmd.txt  hjr.ref  ms.hlsl  sample_spv.hlsl  simple.hlsl
shaders/newdxc/: HalveDepthVS.hlsl
src/: ShaderReflection.cpp
